--- a/tasks/packages.yml
+++ b/tasks/packages.yml
@@ -2,13 +2,13 @@
 
 - name: packages > Setup gem packages
   gem:
-    name:                  "{{ item.name }}"
-    executable:            "{{ item.executable|default(omit) }}"
-    gem_source:            "{{ item.gem_source|default(omit) }}"
-    include_dependencies:  "{{ item.include_dependencies|default(omit) }}"
-    pre_release:           "{{ item.pre_release|default(omit) }}"
-    repository:            "{{ item.repository|default(omit) }}"
-    state:                 "{{ item.state|default(omit) }}"
-    user_install:          "{{ item.user_install|default(omit) }}"
-    version:               "{{ item.version|default(omit) }}"
+    name:                 "{{ item.name }}"
+    executable:           "{{ item.executable|default(omit) }}"
+    gem_source:           "{{ item.gem_source|default(omit) }}"
+    include_dependencies: "{{ item.include_dependencies|default(omit) }}"
+    pre_release:          "{{ item.pre_release|default(omit) }}"
+    repository:           "{{ item.repository|default(omit) }}"
+    state:                "{{ item.state|default(omit) }}"
+    user_install:         "{{ item.user_install|default(false) }}"
+    version:              "{{ item.version|default(omit) }}"
   with_items: elao_gem_packages
